istio.yaml/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: questions-api
  namespace: certimatch
spec:
  hosts:
  - questions-api.certimatch.svc.cluster.local
  http:
  - route:
    - destination:
        host: questions-api.certimatch.svc.cluster.local
        port:
          number: 8887
